# parulidae

./: .gitignore  README.md  Welcome.py  pyproject.toml
app_utils/: maps.py  session.py
data/clean/: monthly.csv
dev_utils/: data.py  times_series.py
pages/: 1_Overview.py  2_Species.py  3_Users.py
utils/: data.py  inaturalist.py  session.py
